# BubbleEngine

./: .gitattributes  .gitignore  Bubble-Engine1.sln  BubbleEngine.sln  README.md  golfgamestate.txt
Bubble-Engine1/: Bubble-Engine1.vcxproj  Bubble-Engine1.vcxproj.filters  BubbleManager.cpp  BubbleManager.h  Component.h  GameObject.cpp  GameObject.h  ObjectFile.h  Renderer.h  Shader.cpp  Shader.h  Transform.h  becore.h  imgui.ini  includes.h  phong.frag
Bubble-Engine1/assets/scripts/: rotacionar.lua
Bubble-Engine1/assets/shaders/: phong.frag  phong.vert
Bubble-Engine1/src/arquivadores/: arquivo3d.cpp  arquivo3d.h  imageloader.cpp  imageloader.h  shader.cpp  shader.h
BubbleEngineEditor/: BubbleEngineEditor.vcxproj  imgui.ini
BubbleEngineEditor/src/: main.cpp
Dll1/: Dll1.cpp  Dll1.h  Dll1.vcxproj  Dll1.vcxproj.filters
Testes/: Testes.vcxproj  Testes.vcxproj.filters
Testes/src/: main.cpp
becommons/: CMakeLists.txt  becommons.hpp  becommons.vcxproj  becommons.vcxproj.filters  cpp.hint
becommons/assets/: fontes_na_memoria.hpp  icon.hpp  imagems_na_memoria.hpp  shaders_na_memoria.hpp
becommons/assets/fontes/consolas/: Consola.hpp  Consolas.hpp  consolai.hpp  consolaz.hpp
becommons/assets/fontes/noto_sans/: noto_bold.hpp  noto_italic.hpp  noto_regular.hpp
becommons/assets/imagems/: banner.hpp  camera.hpp  codigo.hpp  fisica.hpp  folder.hpp  icon.hpp  renderizador.hpp  stop.hpp  transformacao.hpp
becommons/assets/shaders/: imagem_frag.hpp  imagem_vert.hpp  phong_frag.hpp  phong_vert.hpp  quad_frag.hpp  quad_vert.hpp  skybox_frag.hpp  skybox_vert.hpp  texto_frag.hpp  texto_vert.hpp
becommons/include/api/: api_lua.hpp  mat.hpp
becommons/include/arquivadores/: fonte.hpp  imageloader.hpp  modelo.hpp  shader.hpp
becommons/include/assets/: fontes_na_memoria.hpp  imagems_na_memoria.hpp  shaders_na_memoria.hpp
becommons/include/assets/fontes/consolas/: Consola.hpp  Consolas.hpp  consolai.hpp  consolaz.hpp
becommons/include/assets/fontes/minecraft/: minecraft_font.hpp
becommons/include/assets/fontes/noto_sans/: noto_bold.hpp  noto_italic.hpp  noto_regular.hpp
becommons/include/assets/imagems/: arco_cor.hpp  camera.hpp  check.hpp  codigo.hpp  cube.hpp  fisica.hpp  folder.hpp  icon.hpp  iluminacao.hpp  play.hpp  renderizador.hpp  scene.hpp  stop.hpp  terreno.hpp  transformacao.hpp
becommons/include/assets/shaders/: imagem_frag.hpp  imagem_vert.hpp  phong_frag.hpp  quad_frag.hpp  quad_vert.hpp  skybox_frag.hpp  skybox_vert.hpp  texto_frag.hpp
becommons/include/componentes/: camera.hpp  codigo.hpp  componente.hpp  disposicao.hpp  fisica.hpp  imagem.hpp  luz_direcional.hpp  propriedades.hpp  renderizador.hpp  terreno.hpp  texto.hpp  transformacao.hpp
becommons/include/depuracao/: debug.hpp
becommons/include/entidades/: entidade.hpp
becommons/include/inputs/: inputs.hpp
becommons/include/nucleo/: .fase.hpp.swn  .fase.hpp.swo  .fase.hpp.swp  fase.hpp  projeto.hpp  sistema.hpp  sistema_de_fisica.hpp  sistema_de_interface.hpp  sistema_de_renderizacao.hpp
becommons/include/os/: janela.hpp  sistema.hpp  tempo.hpp
becommons/include/util/: cor.hpp  malha.hpp  material.hpp  raio.hpp  textura.hpp  vertice.hpp  vetor2.hpp  vetor3.hpp  vetor4.hpp
becommons/os/: janela.cpp  janela.hpp  tempo.hpp
becommons/src/: threadpool.hpp  threadpool.inl
becommons/src/api/: api_entidade.cpp  api_entidade.hpp  api_lua.cpp  api_lua.hpp  entidade.hpp  mat.hpp
becommons/src/arquivadores/: arquivo3d.cpp  arquivo3d.hpp  fonte.cpp  fonte.hpp  imageloader.cpp  imageloader.hpp  modelo.cpp  modelo.hpp  shader.cpp  shader.hpp  textura.cpp  textura.hpp
becommons/src/cena/: scene.cpp  scene.hpp  scenemanager.cpp  scenemanager.hpp
becommons/src/componentes/: camera.cpp  camera.hpp  codigo.cpp  codigo.hpp  componente.hpp  disposicao.hpp  fisica.cpp  fisica.hpp  imagem.hpp  propriedades.hpp  renderizador.hpp  terreno.cpp  texto.hpp  transformacao.cpp  transformacao.hpp
becommons/src/componentes/camera/: camera.cpp  camera.hpp
becommons/src/componentes/codigo/: codigo.cpp  codigo.hpp
becommons/src/componentes/prototipo/: perlinnoise.cpp  perlinnoise.hpp  terreno.cpp  terreno.hpp
becommons/src/componentes/renderizador/: renderizador.cpp  renderizador.hpp
becommons/src/componentes/transformacao/: transformacao.cpp  transformacao.hpp
becommons/src/comum/: componente.hpp
becommons/src/depuracao/: debug.cpp  debug.hpp
becommons/src/entidades/: camera_editor.cpp  camera_editor.hpp  entidade.cpp  entidade.hpp
becommons/src/inputs/: inputs.cpp  inputs.hpp
becommons/src/nucleo/: cena.cpp  cena.hpp  engine.cpp  engine.hpp  fase.cpp  fase.hpp  projeto.cpp  sistema.cpp  sistema.hpp  sistema_de_codigo.cpp  sistema_de_codigo.hpp  sistema_de_fisica.cpp  sistema_de_fisica.hpp  sistema_de_interface.cpp  sistema_de_interface.hpp  sistema_de_renderizacao.cpp  sistema_de_renderizacao.hpp
becommons/src/os/: janela.cpp
becommons/src/tempo/: delta_time.cpp  delta_time.hpp
becommons/src/util/: cor.hpp  includes.cpp  includes.hpp  luz.hpp  malha.cpp  malha.hpp  material.hpp  raio.hpp  skybox.cpp  skybox.hpp  textura.hpp  utils.cpp  utils.hpp  vertice.hpp  vetor2.hpp  vetor3.hpp  vetor4.hpp
becore/: Imagem.cpp  becore.h  becore.vcxproj  becore.vcxproj.filters  cpp.hint  includes.h
becore/src/interface/: ui.h  (+4 more)
bubbleui/: area_de_docking.cpp  area_de_docking.hpp  bubbleui.h  bubbleui.hpp  bubbleui.vcxproj  bubbleui.vcxproj.filters
bubbleui/docs/: Doxyfile
editor/: Resource.rc  cpp.hint  editor.vcxproj  editor.vcxproj.filters  imgui.ini  main.cpp  projetos.json  resource.h
editor/src/: main.cpp
golf/: CMakeLists.txt  cam.lua  golf.rc  golf.vcxproj  golf.vcxproj.filters  golfgamestate.txt  main.cpp  resource.h
golf/src/: main.cpp
jogos/Golf/: level0.fase  level1.fase  level2.fase  level3.fase
jogos/cubo/: config
jogos/terreno/: config  level0.fase
projetos/: RCa05800  cpp.hint  projetos.rc  projetos.vcxproj  projetos.vcxproj.filters  resource.h
runtime/: CMakeLists.txt  golfgamestate.txt
runtime/src/: main.cpp
tests/: tests.vcxproj
tests/src/: main.cpp
(+729 files in other folders)
